# utility_scripts

./: CHANGELOG.md  LICENSE
.github/workflows/: development.yml  main.yml
backend/: .gitignore  .ruff.toml  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: openrouter_text_generation.py  replicate_image_generation.py
backend/app/core/: config.py
backend/app/database/: models.py  relationships.py
backend/app/functions/: data_generation.py
backend/app/jobs/: hf_diffusion_pipeline.py
backend/app/robot/: diffusion_pipelines.yaml  docstring_gen.py  documentation.yaml  prompts.yaml
backend/app/utils/: db_utils.py  file_utils.py  generation_utils.py  logging_utils.py
frontend/: how_to_enable_json_mode.ipynb
frontend/other/: action_plan.md  test_logic.md  text_dump_1.md  text_dump_10.md  text_dump_11.md  text_dump_12.md  text_dump_13.md  text_dump_14.md  text_dump_15.md  text_dump_16.md  text_dump_17.md  text_dump_18.md  text_dump_19.md  text_dump_2.md  text_dump_3.md  text_dump_4.md  text_dump_5.md  text_dump_7.md  text_dump_8.md  text_dump_9.md
frontend/resources/text_comparison_directory/text_files_2k/interface/: colonisationpanel.gui
frontend/resources/text_comparison_directory/text_files_4k/interface/: achievements.gfx  ages_view.gui  alerts.gui  artemis_ui.gfx  backend.gui  celestialempireview.gui  colonisationpanel.gui  countrydiplomacyview.gui  countrygovernmentview.gui  countryideasview.gui  countrymilitaryview.gfx  countrymissionsview.gui  countryreformview.gui  countryreligionview.gui  countrystabilityview.gfx  countrystabilityview.gui  countrysubjectsview.gui  dlc_browser.gui  endgamedialog.gui  estate_privileges.gui  eu3dialog.gui  frontend.gfx  frontend.gui  general_stuff.gfx  holy_orders_view.gui  hre.gui  ledger.gfx  macrobuildinterface.gfx  macrobuildinterface_override.gui  mapicons.gui  outliner.gui  papacy.gui  peaceview.gui  provinceview.gfx  provinceview.gui  reorg_window_sub.gui  topbar.gui  trade_company_investments_view.gui  unitpanel.gfx  unitpanel_sub.gui  (+1 more)
frontend/resources/text_comparison_directory/text_files_4k/interface/government_mechanics/: egyptian_westernization.gui  government_mechanics.gfx  three_flames_bar.gui
