[project]
name = "utility_scripts"
version = "0.1"
description = "A collection of useful scripts, mainly for automating coding processes by utilizing LLMs in pre-configured workflows."

readme = "README.md"
authors = [{name = "Björn Gunnar Bryggman", email = "bjorn.bryggman@gmail.com"}]
maintainers = [{name = "Björn Gunnar Bryggman", email = "bjorn.bryggman@gmail.com"}]

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License"
]

requires-python = ">= 3.12"
dependencies = [
    "instructor>=1.3.7",
    "openai >= 1.35.0",
    "python-dotenv >= 1.0.1",
    "pyyaml >= 6.0.0",
    "replicate >= 0.28",
    "requests >= 2.32.3",
    "rich >= 13.7.1",
    "structlog >= 24.2.0",
    "sqlmodel >= 0.0.19",
    "tenacity >= 8.4.1",
    "toml >= 0.10",
    "tqdm >= 4.66",
    "Wand >= 0.6.13",
]

[project.urls]
Repository = "https://github.com/bjornbryggman/utility_scripts.git"

[tool.rye]
managed = true
generate-hashes = true
dev-dependencies = [
    "coverage",
    "hypothesis",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["*tests*"]
addopts = "--tb=short"
xfail_strict = true
asyncio_mode = "auto"
filterwarnings = ["error"]
